--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
-DISCORD_TOKEN=(YOUR_DISCORD_TOKEN)
+DISCORD_TOKEN=(YOUR DISCORD TOKEN)
+BIRTHDAY_FILE_PATH = ./birthdays
+UTC_TIME_OFFSET_BIRTHDAY = -7
+IS_US_TIMEZONE_BIRTHDAY = True
